# f1-term

./: .gitignore  Cargo.toml  README.md  example.json  justfile
crates/f1-term-client/: Cargo.toml
crates/f1-term-client/signalr/: client.rs  mod.rs  parsing.rs
crates/f1-term-client/signalr/parsing/: drivers.rs  mod.rs  session_info.rs  stints.rs  teams.rs  timing_data.rs
crates/f1-term-client/src/: lib.rs
crates/f1-term-client/src/signalr/: mod.rs
crates/f1-term-client/src/signalr/parsing/: mod.rs  race_control_messages.rs  timing_data.rs  track_status.rs  weather_data.rs
crates/f1-term-core/: Cargo.toml
crates/f1-term-core/src/: circuit.rs  client.rs  clock.rs  coord.rs  driver.rs  driver_position.rs  flag.rs  gap.rs  lap_time.rs  laps.rs  lib.rs  race_control_message.rs  race_time.rs  session.rs  session_info.rs  snapshot.rs  stint.rs  team.rs  telemetry_engine.rs  telemetry_provider.rs  telemetry_state.rs  time.rs  timing.rs  track_status.rs  weather.rs
crates/f1-term-core/src/aggregators/: layout_fetch.rs  mod.rs  position.rs  sector_count.rs
crates/f1-term-multiviewer/: Cargo.toml
crates/f1-term-multiviewer/src/: client.rs  lib.rs
crates/f1-term-replay/: Cargo.toml
crates/f1-term-replay/src/: app.rs  main.rs  player.rs  server.rs  tui.rs
crates/f1-term-replay/src/api/: client.rs  models.rs
crates/f1-term-replay/src/pages/: mod.rs  playback.rs  selection.rs
crates/f1-term-signalr/: Cargo.toml  README.md
crates/f1-term-signalr/src/: client.rs  extract.rs  lib.rs  merge_patch.rs  topic.rs
crates/f1-term-signalr/src/convert/: circuit.rs  clock.rs  driver.rs  lap_count.rs  mod.rs  race_control_message.rs  session.rs  stint.rs  team.rs  timing.rs  track_status.rs  weather.rs
crates/f1-term-signalr/src/parsing/: driver_list.rs  drivers.rs  extrapolated_clock.rs  lap_count.rs  mod.rs  race_control_messages.rs  session_data.rs  session_info.rs  stints.rs  teams.rs  timing_data.rs  track_status.rs  weather_data.rs
crates/f1-term-tui/: Cargo.toml
crates/f1-term-tui/src/: action.rs  app.rs  constants.rs  lib.rs  state.rs  table.rs  tui.rs
crates/f1-term-tui/src/components/: bottom_bar.rs  circuit_canvas.rs  help_popup.rs  message_log.rs  mod.rs  spread_bar.rs  stint_table.rs  table.rs  timing_table.rs  title_bar.rs
crates/f1-term-tui/src/pages/: dashboard.rs  live_timing.rs  mod.rs  stints.rs
src/: args.rs  logger.rs  main.rs
