[package]
name = "f1-term"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/f1-term-core", "crates/f1-term-multiviewer", "crates/f1-term-replay", "crates/f1-term-signalr", "crates/f1-term-tui"]

[dependencies]
f1-term-signalr = { version = "0.1.0", path = "crates/f1-term-signalr" }
f1-term-core = { version = "0.1.0", path = "crates/f1-term-core" }
f1-term-tui = { version = "0.1.0", path = "crates/f1-term-tui" }
ratatui = "0.30.0"
tokio = { version = "1.49.0", features = ["full"] }
f1-term-multiviewer = { version = "0.1.0", path = "crates/f1-term-multiviewer" }
log = { version = "0.4", features = ["std"] }
chrono = "0.4"

