[package]
name = "f1-term-replay"
version = "0.1.0"
edition = "2024"

[dependencies]
f1-term-signalr = { version = "0.1.0", path = "../f1-term-signalr" }
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8.1", features = ["ws"] }
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
log = "0.4.26"
