[package]
name = "f1-term-signalr"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
f1-term-core = { version = "0.1.0", path = "../f1-term-core" }
futures-util = "0.3.31"
log = "0.4.29"
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.50.0"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }

